<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:progressTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/logo_dermis_fix"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dermis_actionbar"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/user_upload"
        app:srcCompat="@drawable/insert_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/perintah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perintah"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/perintah">

        <Button
            android:id="@+id/btn_kamera"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/kamera"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:fontFamily="@font/inter_bold"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/perintah"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_galleri"
            android:layout_width="130dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/galeri"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:fontFamily="@font/inter_bold"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/perintah"
            app:layout_constraintStart_toEndOf="@id/btn_kamera"/>

    </LinearLayout>



    <Button
        android:id="@+id/btn_deteksi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/deteksi_kulit"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:fontFamily="@font/inter_bold"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>