<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.output.OutputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/user_upload"
            app:srcCompat="@drawable/insert_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp" />

                <TextView
                    android:id="@+id/confidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confidence"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="120dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/output_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="Acne"/>

            <TextView
                android:id="@+id/output_confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="260dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="0.64"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_cause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_condition">

            <TextView
                android:id="@+id/cause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cause"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/output_cause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="15sp"
                tools:text="Acne is primarily caused by a combination of factors that include hormonal changes, excess oil production,"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_cause">

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/output_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="15sp"
                tools:text="Acne is a common skin condition that happens when hair follicles under the skin become clogged. "/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_severity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_desc">

            <TextView
                android:id="@+id/severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/output_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="15sp"
                tools:text="Low"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_severity">

            <TextView
                android:id="@+id/treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treatment"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/output_treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:textSize="15sp"
                tools:text="Acne can be effectively treated through various approaches"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>